--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   blurry_modal_progress_hud: ^1.1.1
   cloud_firestore: ^5.4.4
   intl: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   # flutter_launcher_icons: ^0.14.1
@@ -73,7 +74,7 @@ flutter:
   assets:
     - assets/images/scholar.png
     - assets/images/icon.png
-    
+    - assets/images/doodles.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
